# Scraps

./: .gitignore  CMakeLists.txt  README.md
assembly_experiment/: exp_1.s  exp_2.s  exp_3.s  exp_final.s
cpp_in_24_hrs/h04/: CMakeLists.txt  main.cpp
cpp_in_24_hrs/h04/inc/: inheritance.h  linked_list.h
cpp_in_24_hrs/h05/: CMakeLists.txt  String.cpp  String.h  static_cat.cpp  static_function.cpp
data_structure/: CMakeLists.txt  main.c
data_structure/inc/: linked_list.c  linked_list.h  priority_queue.c  priority_queue.h  priority_queue_ll.c  priority_queue_ll.h  queue_array.c  queue_array.h  queue_linked_list.c  queue_linked_list.h  seq_list_noob.c  seq_list_noob.h  sequence_list.c  sequence_list.h  stack.c  stack.h
ds_xaut/: CMakeLists.txt  stack_application.cpp
ds_xaut/inc/: double_linked_list.cpp  double_linked_list.h  linked_list.cpp  linked_list.h  pre_defined.h  seq_list.cpp  seq_list.h  sequence.cpp  sequence.h  stack.cpp  stack.h
